# gb-emulator

./: Cargo.toml
src/: apu.rs  audio.rs  bootrom.rs  bus.rs  cartridge.rs  cpu.rs  gameboy.rs  hram.rs  joypad.rs  lcd.rs  main.rs  operand.rs  peripherals.rs  ppu.rs  registers.rs  timer.rs  wram.rs
src/apu/: channel1.rs  channel2.rs  channel3.rs  channel4.rs
src/cartridge/: cartridge_header.rs  mbc.rs
src/cpu/: decode.rs  fetch.rs  instruction.rs  interrupt.rs  operand.rs
