[package]
name = "gb-emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# sdl2 v0.35.2 does not build on MacOS
# https://github.com/Rust-SDL2/rust-sdl2/issues/1203
sdl2 = { version = "=0.35.1", features = ["raw-window-handle", "bundled", "static-link"] }
sdl2-sys = "=0.35.1"
